--- a/MetaQoutesLogReaderLib/MetaQoutesLogReaderLib.vcxproj.filters
+++ b/MetaQoutesLogReaderLib/MetaQoutesLogReaderLib.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="log_reader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="regex.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="log_reader.cpp">
