--- a/MetaQoutesLogReaderLib/MetaQoutesLogReaderLib.vcxproj.filters
+++ b/MetaQoutesLogReaderLib/MetaQoutesLogReaderLib.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="regex.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="thread_safe_queue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="log_reader.cpp">
