--- a/MetaQoutesLogReaderLib/MetaQoutesLogReaderLib.vcxproj.filters
+++ b/MetaQoutesLogReaderLib/MetaQoutesLogReaderLib.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="thread_safe_queue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="platform_spec.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="log_reader.cpp">
