--- a/MetaQoutesLogReaderLib/MetaQoutesLogReaderLib.vcxproj.filters
+++ b/MetaQoutesLogReaderLib/MetaQoutesLogReaderLib.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="log_reader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="log_reader1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="log_reader.props" />
